# Krayo

./: .gitignore  .gitmodules  CMakeLists.txt  Krayo.sln
Data/: .gitignore
Data/Materials/: white.json
Data/Models/: cube.krayojson
Data/Shaders/: BitonicSorter.comp  DepthPrePass.vert  ForwardPass.frag  ForwardPass.vert  GridFrustumsGenerator.comp  LightCuller.comp  ParticleEngine.comp  ParticlePass.frag  ParticlePass.vert
Krayo/: CMakeLists.txt  Krayo.vcxproj  Krayo.vcxproj.filters
Krayo/include/Krayo/: ApiDef.hpp  ApiPrerequisites.hpp  Component.hpp  Engine.hpp  Events.hpp  Map.hpp  Material.hpp  Object.hpp
Krayo/include/Krayo/Component/: Camera.hpp  IComponent.hpp  Light.hpp  Model.hpp  Transform.hpp  Type.hpp
Krayo/include/Krayo/Resource/: IResource.hpp  Manager.hpp  Model.hpp  Type.hpp
Krayo/include/Krayo/Scene/: Map.hpp  Object.hpp
Krayo/source/: Engine.cpp  Engine.hpp  Main.cpp  Map.cpp  Map.hpp  Object.cpp  Object.hpp  Prerequisites.hpp  ResourceDir.cpp  ResourceDir.hpp
Krayo/source/API/: Component.cpp  Engine.cpp  EngineImpl.cpp  EngineImpl.hpp  Events.cpp  Map.cpp  Material.cpp  Object.cpp
Krayo/source/API/Component/: Camera.cpp  IComponent.cpp  Light.cpp  Model.cpp  Transform.cpp
Krayo/source/API/Resource/: IResource.cpp  Manager.cpp  Model.cpp
Krayo/source/API/Scene/: Map.cpp  Object.cpp
Krayo/source/Component/: Camera.cpp  Camera.hpp  Emitter.cpp  Emitter.hpp  IComponent.cpp  IComponent.hpp  Light.cpp  Light.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Transform.cpp  Transform.hpp
Krayo/source/Events/: EventManager.cpp  EventManager.hpp  Manager.cpp  Manager.hpp
Krayo/source/Math/: AABB.cpp  AABB.hpp  Frustum.cpp  Frustum.hpp  Plane.cpp  Plane.hpp
Krayo/source/Renderer/HighLevel/: DepthPrePass.cpp  DepthPrePass.hpp  ForwardPass.cpp  ForwardPass.hpp  GridFrustumsGenerator.cpp  GridFrustumsGenerator.hpp  LightCuller.cpp  LightCuller.hpp  ParticleEngine.cpp  ParticleEngine.hpp  ParticlePass.cpp  ParticlePass.hpp  Renderer.cpp  Renderer.hpp  ResourceFactory.cpp  ResourceFactory.hpp  ResourceManager.cpp  ResourceManager.hpp  ShaderMacroDefinitions.cpp  ShaderMacroDefinitions.hpp
Krayo/source/Renderer/LowLevel/: Backbuffer.cpp  Backbuffer.hpp  Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  Debugger.cpp  Debugger.hpp  DescriptorAllocator.cpp  DescriptorAllocator.hpp  Device.cpp  Device.hpp  Extensions.cpp  Extensions.hpp  Framebuffer.cpp  Framebuffer.hpp  Instance.cpp  Instance.hpp  MultiPipeline.cpp  MultiPipeline.hpp  Pipeline.cpp  Pipeline.hpp  QueueManager.cpp  QueueManager.hpp  RingBuffer.cpp  RingBuffer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Tools.cpp  Tools.hpp  Translations.cpp  Translations.hpp  Types.hpp  Util.cpp  Util.hpp  VertexLayout.cpp  VertexLayout.hpp  VkRAII.hpp
Krayo/source/Renderer/LowLevel/Linux/: LinuxBackbuffer.cpp  LinuxBackbuffer.hpp
Krayo/source/Renderer/LowLevel/Win/: WinBackbuffer.cpp  WinBackbuffer.hpp
Krayo/source/Resource/: IResource.cpp  IResource.hpp  Manager.cpp  Manager.hpp  Material.cpp  Material.hpp  Model.cpp  Model.hpp  Texture.cpp  Texture.hpp
Krayo/source/Resources/: Manager.cpp  Manager.hpp  Material.cpp  Material.hpp  Model.cpp  Model.hpp  Resource.cpp  Resource.hpp  Texture.cpp  Texture.hpp
Krayo/source/Scene/: Camera.cpp  Camera.hpp  Component.cpp  Component.hpp  Emitter.cpp  Emitter.hpp  Light.cpp  Light.hpp  Map.cpp  Map.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Object.cpp  Object.hpp  Scene.cpp  Scene.hpp
Krayo/source/Utils/: Container.hpp  ContainerImpl.hpp  FBXFile.cpp  FBXFile.hpp  FileMesh.cpp  IModelFile.hpp  ModelFile.hpp  ModelLoader.cpp  ModelLoader.hpp  Traits.hpp  TypeID.cpp  TypeID.hpp
Krayo/source/Utils/ModelFile/: FBXModelFile.cpp  FBXModelFile.hpp  FileMaterial.cpp  FileMaterial.hpp  FileMesh.hpp  FileTextureHDR.cpp  FileTextureHDR.hpp  FileTextureSDR.cpp  FileTextureSDR.hpp  IFileData.hpp  IFileTexture.hpp  IModelFile.hpp  KrayoJSONModelFile.cpp  KrayoJSONModelFile.hpp  OBJModelFile.cpp  OBJModelFile.hpp
Krayo/source/Utils/ModelFiles/: FBXModelFile.cpp  FBXModelFile.hpp  IModelFile.hpp  KrayoJSONModelFile.cpp  KrayoJSONModelFile.hpp  OBJModelFile.cpp  OBJModelFile.hpp
KrayoGame/: CMakeLists.txt  KrayoGame.vcxproj  KrayoGame.vcxproj.filters  Main.cpp
